tests/baselines/reference/indexedAccessWithFreshObjectLiteral.errors.txt
tests/cases/compiler/indexedAccessWithFreshObjectLiteral.ts(24,19): error TS7017: Element implicitly has an 'any' type because type '{ a: number; b: string; c: boolean; }' has no index signature.


==== tests/cases/compiler/indexedAccessWithFreshObjectLiteral.ts (1 errors) ====
    function foo (id: string) {
        return {
            a: 1,
            b: "",
            c: true
        }[id]
    }
    
    function bar (id: 'a' | 'b') {
        return {
            a: 1,
            b: "",
            c: false
        }[id]
    }
    
    function baz () {
        const a = {
            a: 1,
            b: "",
            c: false
        }
        for (var k in a) {
            const c = a[k]
                      ~~~~
!!! error TS7017: Element implicitly has an 'any' type because type '{ a: number; b: string; c: boolean; }' has no index signature.
        }
    }
    